fix: overflow on small device

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,3 +365,10 @@ form a:hover {
     width: 80vw;
   }
 }
+
+
+@media screen and (max-width: 480px){
+  form a{
+    width: 80%;
+  }
+}
